return _nav.html to previous
Former-commit-id: f275f137f44de9a98d4d22492ceb719bf66080a4 [formerly 83dd16d984c105282b4cb6c09d654076baaf9d73]
Former-commit-id: 0192622b007fc9fccb526d394619f330e3bd8d8b

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,44 +1,39 @@
 	<nav>
 		<ul>
-			<li class="dropdown">
-				<a href="index.html">Mission</a>
-					<div class="dropdown-content">
+			<li><a href="index.html">Mission</a>
+      <ul>
 						<a href="timeline.html">Timeline</a>
 						<a href="index.html#sitemap">Site Map</a>
-					</div>
+      </ul>
 			</li>
-			<li class="dropdown">
-				<a href="colonies.html">Colonies</a>
-					<div class="dropdown-content">
+			<li><a href="colonies.html">Colonies</a>
+      <ul>
 						<a href="colonies.html#lalande">Lalande</a>
 						<a href="colonies.html#peary">Peary</a>
 						<a href="colonies.html#orbital">Orbital</a>
-					</div>
+      </ul>
 			</li>
-			<li class="dropdown">
-				<a href="machines.html">Machines</a>
-					<div class="dropdown-content">
+			<li><a href="machines.html">Machines</a>
+      <ul>
 						<a href="machines.html#robots">Robots</a>
 						<a href="machines.html#construction">Construction</a>
 						<a href="machines2.html#power">Power</a>
 						<a href="machines2.html#extraction">Extraction</a>
 						<a href="machines2.html#transport">Transport</a>
-					</div>
+					</ul>
 			</li>
-			<li class="dropdown">
-				<a href="project.html">Project</a>
-					<div class="dropdown-content">
+			<li><a href="project.html">Project</a>
+					<ul>
 						<a href="project.html#chart">Chart</a>
 						<a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a>
 						<a href="http://www.moonwards.com/forum/">Forum</a>
-					</div>
+					</ul>
 			</li>
-			<li class="dropdown">
-				<a href="learn.html">Learn</a>
-					<div class="dropdown-content">
+			<li><a href="learn.html">Learn</a>
+					<ul>
 						<a href="learn.html#interactives">Interactives</a>
 						<a href="learn.html#lessons">Lessons</a>
-					</div>
+					</ul>
 			</li>
 		</ul>
 	</nav>
