--- a/css/main.nest.sass.css
+++ b/css/main.nest.sass.css
@@ -1,8 +1,7 @@
-@charset "UTF-8";
 html {
   margin: 0;
   color: #f7f7dc;
-  font: 1rem/1.5rem "Titillium Web", sans-serif;
+  font: 1rem/1.5rem 'Titillium Web', sans-serif;
   background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
   padding: 0;
   background-size: 1600px; }
@@ -10,7 +9,7 @@ html {
     html {
       background-size: 100% auto; } }
 
-/*All color, text styling, visual touches, and basic doc styles */
+/*All color, text styling, visual touches, and basic doc styles*/
 body, ul, figure {
   margin: 0; }
 
@@ -101,55 +100,105 @@ figcaption {
   display: none; }
 
 nav {
-  background-color: #000; }
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 20; }
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    background-color: #000; }
+  nav a {
+    text-decoration: none;
+    font-weight: 300;
+    color: #fac819; }
+    nav a:visited {
+      color: #fac819; }
+    nav a:hover {
+      color: yellow;
+      background-color: inherit; }
+    nav a:active {
+      color: yellow;
+      background-color: inherit; }
 
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding-left: 5%;
-  overflow: hidden; }
+nav > ul {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+  -moz-box-align: baseline;
+  box-align: baseline;
+  -webkit-align-items: baseline;
+  -moz-align-items: baseline;
+  -ms-align-items: baseline;
+  -o-align-items: baseline;
+  align-items: baseline;
+  -ms-flex-align: baseline;
+  -webkit-box-pack: distribute;
+  -moz-box-pack: distribute;
+  box-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
+  -ms-justify-content: space-around;
+  -o-justify-content: space-around;
+  justify-content: space-around;
+  -ms-flex-pack: distribute;
+  -webkit-flex-flow: row nowrap;
+  -moz-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  width: 100%;
+  height: 33px; }
 
-nav li {
-  float: left; }
-
-nav li a {
-  display: block;
-  text-align: center;
-  padding: 12px 16px;
-  font-size: 150%;
-  text-decoration: none;
-  color: #fac819;
+nav > ul li {
   font-size: 18px;
   font-weight: 300;
-  text-decoration: none;
-  font: 1rem/1.5rem "Titillium Web", sans-serif; }
+  padding: 5px; }
 
-nav > ul > li > a {
-  color: #fac819; }
-
-nav li div a {
-  padding: 0px;
-  text-align: left; }
-
-nav li a:hover {
-  background-color: #000; }
-
-nav li.dropdown {
-  display: inline-block; }
-
-nav .dropdown-content {
+/* Make dropdown menus:
+  ul that is a CHILD of li which is a DESCENDENT of nav */
+nav li > ul {
   display: none;
-  position: absolute;
   border-radius: 15px;
   border: 1px solid #666;
   border-top: none;
   padding: 10px; }
 
-nav .dropdown:hover .dropdown-content {
-  display: block; }
-
-nav .dropdown-content a {
-  background-color: #000; }
+/* Statement applies only to
+  child ul, only when li is hovered */
+nav li:hover > ul {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -moz-box-align: stretch;
+  box-align: stretch;
+  -webkit-align-items: stretch;
+  -moz-align-items: stretch;
+  -ms-align-items: stretch;
+  -o-align-items: stretch;
+  align-items: stretch;
+  -ms-flex-align: stretch;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  -o-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  -webkit-flex-flow: column nowrap;
+  -moz-flex-flow: column nowrap;
+  flex-flow: column nowrap; }
 
 header {
   width: 100%;
@@ -527,12 +576,15 @@ div .gallery {
 @media (min-height: 1000px) {
   .goodHeight {
     height: 950px; } }
+
 @media (min-height: 900px) {
   .goodHeight {
     height: 850px; } }
+
 @media (min-height: 800px) {
   .goodHeight {
     height: 750px; } }
+
 @media (min-height: 700px) {
   .goodHeight {
     height: 650px; } }
@@ -693,6 +745,7 @@ p.atom {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
 .tooltipster-update-fade {
   animation: tooltipster-fading 200ms; }
 
@@ -703,6 +756,7 @@ p.atom {
     transform: rotate(2deg); }
   100% {
     transform: rotate(0); } }
+
 .tooltipster-update-rotate {
   animation: tooltipster-rotating 600ms; }
 
@@ -711,6 +765,7 @@ p.atom {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
+
 .tooltipster-update-scale {
   animation: tooltipster-scaling 600ms; }
 
@@ -836,14 +891,14 @@ details.details_shim_open > summary {
 
 details.details_shim_closed > summary:before {
   display: inline-block;
-  content: "▶";
+  content: "\25b6";
   padding: 0 0.1em;
   margin-right: 0.4em;
   font-size: 0.9em; }
 
 details.details_shim_open > summary:before {
   display: inline-block;
-  content: "▼";
+  content: "\25bc";
   padding: 0;
   margin-right: 0.35em; }
 
