add content to lalande.html
Former-commit-id: 4a9f15d4374a44231552aca91dfab2ac310a2055 [formerly 3f8244ae5167bb3fadacadcc384fa844187ff33f]
Former-commit-id: 639261f467e917c4da73f19279643f01e7a9c6e8

--- a/css/content.nest.sass.css
+++ b/css/content.nest.sass.css
@@ -1,8 +1,7 @@
-@charset "UTF-8";
 html {
   margin: 0;
   color: #f7f7dc;
-  font: 1rem/1.5rem "Titillium Web", sans-serif;
+  font: 1rem/1.5rem 'Titillium Web', sans-serif;
   background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
   padding: 0;
   background-size: 1600px; }
@@ -10,7 +9,7 @@ html {
     html {
       background-size: 100% auto; } }
 
-/*All color, text styling, visual touches, and basic doc styles */
+/*All color, text styling, visual touches, and basic doc styles*/
 body, ul, figure {
   margin: 0; }
 
@@ -96,6 +95,14 @@ figcaption {
     background-color: #3c3c0a;
     cursor: help; }
 
+.note-inline {
+  font-weight: 400;
+  font-size: 1rem;
+  color: yellow; }
+  .note-inline:hover {
+    background-color: #3c3c0a;
+    cursor: help; }
+
 /*This hides Tooltipster tooltips until hovered */
 .tooltip_templates {
   display: none; }
@@ -161,7 +168,7 @@ nav > ul li {
   padding: 5px; }
 
 /* Make dropdown menus:
- * ul that is a CHILD of li which is a DESCENDENT of nav */
+  ul that is a CHILD of li which is a DESCENDENT of nav */
 nav li > ul {
   display: none;
   border-radius: 15px;
@@ -170,7 +177,7 @@ nav li > ul {
   padding: 10px; }
 
 /* Statement applies only to
- * child ul, only when li is hovered */
+  child ul, only when li is hovered */
 nav li:hover > ul {
   display: -webkit-box;
   display: -moz-box;
@@ -723,6 +730,7 @@ div .gallery {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
 .tooltipster-update-fade {
   animation: tooltipster-fading 200ms; }
 
@@ -733,6 +741,7 @@ div .gallery {
     transform: rotate(2deg); }
   100% {
     transform: rotate(0); } }
+
 .tooltipster-update-rotate {
   animation: tooltipster-rotating 600ms; }
 
@@ -741,6 +750,7 @@ div .gallery {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
+
 .tooltipster-update-scale {
   animation: tooltipster-scaling 600ms; }
 
@@ -866,14 +876,14 @@ details.details_shim_open > summary {
 
 details.details_shim_closed > summary:before {
   display: inline-block;
-  content: "▶";
+  content: "\25b6";
   padding: 0 0.1em;
   margin-right: 0.4em;
   font-size: 0.9em; }
 
 details.details_shim_open > summary:before {
   display: inline-block;
-  content: "▼";
+  content: "\25bc";
   padding: 0;
   margin-right: 0.35em; }
 
@@ -933,12 +943,15 @@ tr:nth-child(2n) {
 @media (min-height: 1000px) {
   .goodHeight {
     height: 950px; } }
+
 @media (min-height: 900px) {
   .goodHeight {
     height: 850px; } }
+
 @media (min-height: 800px) {
   .goodHeight {
     height: 750px; } }
+
 @media (min-height: 700px) {
   .goodHeight {
     height: 650px; } }
