--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -129,6 +129,14 @@ h5
     background-color: rgb(60,60,10)
     cursor: help
 
+.note-inline
+  font-weight: 400
+  font-size: 1rem
+  color: yellow
+  &:hover
+    background-color: rgb(60,60,10)
+    cursor: help
+
 /*This hides Tooltipster tooltips until hovered
 .tooltip_templates
   display: none
