--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -76,6 +76,15 @@ figcaption
     background-color: rgb(60,60,10)
     cursor: help
 
+.note-inline
+  font-weight: 400
+  font-size: 1rem
+  color: yellow
+  &:hover
+    background-color: rgb(60,60,10)
+    cursor: help
+
+
 /*This hides Tooltipster tooltips until hovered
 .tooltip_templates
   display: none
