add transport content
Former-commit-id: 096013a6f10a102c1f269075d2366a7e026100d0

--- a/_includes/transportTethers.html
+++ b/_includes/transportTethers.html
@@ -193,7 +193,7 @@
 					that just to protect itself from collisions with space junk.
 				</li>
     <li>
-    An approach to satellite orbits based around the priorities of the tether complex would help a lot with collision issues. Three orbital altitudes would be strongly preferred: below 250 km, where the tether foot is, at the altitude of the anchor body (but only if the satellite will move in an orbit similar to the anchor), and above the
+    An approach to satellite orbits based around the priorities of the tether complex would help a lot with collision issues. Three orbital altitudes would be strongly preferred: below 250 km, where the tether foot is, at the altitude of the anchor body (but only if the satellite will move in an orbit similar to the anchor), and above the tether tip. Since the tether complex can help a great deal with satellite deployment, and maintenance, there would be a strong incentive to choose orbits that pose no threat to it.
     </li>
 			</ul>
 				<p>
@@ -208,6 +208,15 @@
 					as existing - something that reduces the taper ratio to, say, 3
 					instead of 10.
 				</p>
+    <p>
+     There is lots of room to play with this idea. Down the road the anchor mass could be moved into a higher orbit, lowering the speed needed to reach its foot even further. If it orbits at 20,000 km the speed of its foot is 3.4 km/s relative to Earth's surface. If the spaceward tether extends another 10,000 km a vessel released from there would receive a speed boost of 2.6 km/s for interplanetary travel. The best balance of where to place the anchor mass would have to do with the power and time needed to travel along the cables, the maintenance needs of the complex, and the economics of using rocket engines rather than relying on tethers.
+    </p>
+    <p>
+     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be an awful lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea.
+    </p>
+    <p>
+     That could be worth it, if each one is carrying a ton of platinum.
+    </p>
 			</div>
 		</div>
 	</section>
