--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -84,25 +84,6 @@ figcaption
     background-color: rgb(60,60,10)
     cursor: help
 
-
-/*This hides Tooltipster tooltips until hovered
-.tooltip_templates
-  display: none
-
-@mixin RadiusOut
-  -moz-border-radius: $outRadius
-  -webkit-border-radius: $outRadius
-  -ms-border-radius: $outRadius
-  border-radius: $outRadius
-
-@mixin RadiusIn
-  -moz-border-radius: $inRadius
-  -webkit-border-radius: $inRadius
-  -ms-border-radius: $inRadius
-  border-radius: $inRadius
-
-@mixin RadiusSide
-  -moz-border-radius: $sideRadius
-  -webkit-border-radius: $sideRadius
-  -ms-border-radius: $sideRadius
-  border-radius: $sideRadius
+ul
+  padding: 10px
+  padding-left: 35px
