--- a/sass/_tooltipster.sass
+++ b/sass/_tooltipster.sass
@@ -1,3 +1,7 @@
+/*This hides Tooltipster tooltips until hovered
+.tooltip_templates
+  display: none
+
 /* This is the core CSS of Tooltipster
 
 .tooltipster-base
