begin timeline, adjust nav and tabs
Former-commit-id: 14d95fc28a97b5134bff52f7f10f2da64777f135

--- a/_includes/machinesExtraction.html
+++ b/_includes/machinesExtraction.html
@@ -4,8 +4,7 @@
 			<div class="innerDiv">
 				<h1>Extraction: Mining and Refining Elements and Compounds</h1>
 				<p>
-					The Moon has a marked tendency to either have lots of something, or
-					none at all of something. Once we are able to really dig around there
+					The Moon has a marked tendency to either have lots of something, or none at all of something. Once we are able to really dig around there
 					is reason to hope we will find some stuff there is no sign of on the
 					surface. For the first years, it is prudent to assume what you have to
 					work with is only what has been proven to be there.
