--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,6 @@
 			<li><a href="index.html">Mission</a>
       <ul>
 						<a href="timeline.html">Timeline</a>
-						<a href="index.html#sitemap">Site Map</a>
       </ul>
 			</li>
 			<li><a href="colonies.html">Colonies</a>
@@ -16,9 +15,9 @@
 			<li><a href="machines.html">Machines</a>
       <ul>
 						<a href="machines.html#robots">Robots</a>
-						<a href="machines.html#construction">Construction</a>
+						<a href="machines.html#construction">Building</a>
 						<a href="machines2.html#power">Power</a>
-						<a href="machines2.html#extraction">Extraction</a>
+						<a href="machines2.html#extraction">Mining</a>
 						<a href="machines2.html#transport">Transport</a>
 					</ul>
 			</li>
@@ -31,7 +30,7 @@
 			</li>
 			<li><a href="learn.html">Learn</a>
 					<ul>
-						<a href="learn.html#interactives">Interactives</a>
+						<a href="learn.html#interactives">Try It</a>
 						<a href="learn.html#lessons">Lessons</a>
 					</ul>
 			</li>
