--- a/_includes/transportTethers.html
+++ b/_includes/transportTethers.html
@@ -186,6 +186,7 @@
 					things, and to move things that are getting too close. Repair and
 					maintenance on the cable would be a continuous task far more
 					demanding than such jobs on a lunar tether.
+    </li>
     <li>
      It would be important,
 					and logical, that the space station at the anchor host an
@@ -212,7 +213,7 @@
      There is lots of room to play with this idea. Down the road the anchor mass could be moved into a higher orbit, lowering the speed needed to reach its foot even further. If it orbits at 20,000 km the speed of its foot is 3.4 km/s relative to Earth's surface. If the spaceward tether extends another 10,000 km a vessel released from there would receive a speed boost of 2.6 km/s for interplanetary travel. The best balance of where to place the anchor mass would have to do with the power and time needed to travel along the cables, the maintenance needs of the complex, and the economics of using rocket engines rather than relying on tethers.
     </p>
     <p>
-     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be an awful lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea.
+     One thing that could be an important consideration is the ease of dropping payloads from the tether foot that then descend to the surface pretty passively. Every km/s shaved off the entry speed of a vessel reduces the demands on a heat shield a lot. At some velocity, it becomes viable to design drop vessels that use aerodynamic lift to reduce speed and maneuver. With rocket fuel sourced from space, it could become cheap to have rockets that leave the foot, accelerate retrograde down to a few hundred meters a second relative to Earth's surface, drop their load, and accelerate back to the tether foot again. That is about 7 km/s of delta V, but the rocket would be a lot lighter on the way back, which saves on fuel. And fuel from space could become cheap. Then you would need drop vessels that can reduce their speed and direct themselves enough to deploy parachutes and land safely in a reasonably well defined area, probably at sea.
     </p>
     <p>
      That could be worth it, if each one is carrying a ton of platinum.
