--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,9 @@ $(document).ready(function() {
 		</script>
 	</head>
 <body>
+<div class="back2index">
+ <a href="https://www.moonwards.com/blogMain.html">Return to post index</a>
+</div>
 	<header>
 		<p>
      What if a group of nations was determined to
@@ -28,15 +31,9 @@ $(document).ready(function() {
      technical and economic merit?
 		</p>
 	</header>
-	<div class="back">
-		<a href="https://www.moonwards.com/blogMain.html">Blog Index</a>
-	</div>
 	<div class="container">
 		<h1>{{page.title}}</h1>
 {{content | remove: 'end-excerpt'}}
-	</div>
-	<div class="back">
-		<a href="https://www.moonwards.com/blogMain.html">Blog Index</a>
 	</div>
 </body>
 </html>
