--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -23,7 +23,7 @@ h1
   +align-self(center)
   padding: 15px 0 15px 45px
   margin: 0
-  border-bottom: 1px solid $headingColor
+  border-bottom: 2px solid $headingColor
 
 h2
   color: $headingColor
@@ -54,6 +54,15 @@ h5
   margin: 20px 0 5px 0
   +align-self(center)
 
+.column h1
+  font-weight: 400
+  letter-spacing: 1px
+
+.column h2
+  font-weight: 400
+  text-align: right
+  padding: 10px
+  margin: 5px auto
 
 figcaption
   font-size: 0.8rem
