--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -3,11 +3,13 @@ nav
   position: fixed
   top: 0
   z-index: 20
+  background-color: #000
   ul
     list-style-type: none
     padding: 0
     margin: 0
     background-color: #000
+
   a
     text-decoration: none
     font-weight: 300
@@ -24,16 +26,19 @@ nav
 nav > ul
   +display(flex)
   +align-items(baseline)
-  +justify-content(space-around)
+  +justify-content(flex-start)
   +flex-flow(row nowrap)
   width: 100%
   height: 33px
+  padding-left: 15px
 
 
 nav > ul li
+  +flex(1 1 100px)
   font-size: 18px
   font-weight: 300
   padding: 5px
+
 
 /* Make dropdown menus:
   ul that is a CHILD of li which is a DESCENDENT of nav
@@ -49,5 +54,5 @@ nav li > ul
 nav  li:hover > ul
   +display(flex)
   +align-items(stretch)
-  +justify-content(flex-start)
+  +justify-content(center)
   +flex-flow(column nowrap)
