--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -6,6 +6,29 @@ html
 body, ul, figure
   margin: 0
 
+.back2index
+  +display(flex)
+  +justify-content(center)
+  +align-items(center)
+  position: fixed
+  top: 0px
+  width: 100%
+  height: 2rem
+  z-index: 2
+  background-color: black
+  a
+    padding: 0 3px
+    letter-spacing: 2px
+    font-size: 0.8rem
+    text-align: center
+    color: $navAnchor
+    &:visited
+      color: $navAnchor
+    &:hover
+      color: $linx
+    &:active
+      color: $aVisited
+
 
 header
   background-color: #000
@@ -50,23 +73,8 @@ header
       width: 90%
       background: $outerBkgd
 
-.back
-  position: absolute
-  right: 6%
-  background-color: $innerBkgd
-  width: 140px
-  height: 30px
-  a
-    margin-left: 20px
-    letter-spacing: 2px
-    padding: 0 3px
-    color: $navAnchor
-    &:visited
-      color: $navAnchor
-    &:hover
-      color: $linx
-    &:active
-      color: $aVisited
+
+
 
 
 a
