--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,36 +2,36 @@
 		<ul>
 			<li><a href="index.html">Mission</a>
       <ul>
-						<a href="timeline.html">Timeline</a>
+						<li><a href="timeline.html">Timeline</a></li>
       </ul>
 			</li>
 			<li><a href="colonies.html">Colonies</a>
       <ul>
-						<a href="colonies.html#lalande">Lalande</a>
-						<a href="colonies.html#peary">Peary</a>
-						<a href="colonies.html#orbital">Orbital</a>
+						<li><a href="colonies.html#lalande">Lalande</a></li>
+						<li><a href="colonies.html#peary">Peary</a></li>
+						<li><a href="colonies.html#orbital">Orbital</a></li>
       </ul>
 			</li>
 			<li><a href="machines.html">Machines</a>
       <ul>
-						<a href="machines.html#robots">Robots</a>
-						<a href="machines.html#construction">Building</a>
-						<a href="machines2.html#power">Power</a>
-						<a href="machines2.html#extraction">Mining</a>
-						<a href="machines2.html#transport">Transport</a>
+						<li><a href="machines.html#robots">Robots</a></li>
+						<li><a href="machines.html#construction">Building</a></li>
+						<li><a href="machines2.html#power">Power</a></li>
+						<li><a href="machines2.html#extraction">Mining</a></li>
+						<li><a href="machines2.html#transport">Transport</a></li>
 					</ul>
 			</li>
 			<li><a href="project.html">Project</a>
 					<ul>
-						<a href="project.html#chart">Chart</a>
-						<a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a>
-						<a href="http://www.moonwards.com/forum/">Forum</a>
+						<li><a href="project.html#chart">Chart</a></li>
+						<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
+						<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
 					</ul>
 			</li>
 			<li><a href="learn.html">Learn</a>
 					<ul>
-						<a href="learn.html#interactives">Try It</a>
-						<a href="learn.html#lessons">Lessons</a>
+						<li><a href="learn.html#interactives">Try It</a></li>
+						<li><a href="learn.html#lessons">Lessons</a></li>
 					</ul>
 			</li>
 		</ul>
