--- a/docs/css/content.nest.sass.css
+++ b/docs/css/content.nest.sass.css
@@ -174,7 +174,7 @@ nav > ul {
   height: 33px;
   padding-left: 15px; }
 
-nav > ul li {
+nav > ul > li {
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   box-flex: 1;
@@ -196,6 +196,18 @@ nav li > ul {
   padding: 10px;
   text-align: center;
   margin: 0; }
+
+nav li > ul li {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -moz-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  font-size: 18px;
+  font-weight: 300;
+  padding: 5px; }
 
 /* Statement applies only to
   child ul, only when li is hovered */
