--- a/sass/_nav.sass
+++ b/sass/_nav.sass
@@ -33,7 +33,7 @@ nav > ul
   padding-left: 15px
 
 
-nav > ul li
+nav > ul > li
   +flex(1 1 100px)
   font-size: 18px
   font-weight: 300
@@ -50,6 +50,13 @@ nav li > ul
   padding: 10px
   text-align: center
   margin: 0
+
+nav li > ul li
+    +flex(1 1 auto)
+    font-size: 18px
+    font-weight: 300
+    padding: 5px
+
 
 /* Statement applies only to
   child ul, only when li is hovered
