--- a/sass/_contentHeader.sass
+++ b/sass/_contentHeader.sass
@@ -1,6 +1,6 @@
 header
   +display(flex)
-  +flex-flow(row-reverse)
+  +flex-flow(row-reverse wrap)
   +justify-content(flex-start)
   +align-items(center)
   +align-content(flex-start)
@@ -9,10 +9,10 @@ header
 
 #Logo
   +flex(1.5 1 250px)
-  padding: 3rem
+  padding: 1.5rem 3rem 4.5rem 3rem
 
 .intro
-  +flex(3 0 40vw)
+  +flex(3 1 30%)
   font-size: 1rem
   line-height: 1.6rem
   text-align: right
