--- a/sass/_mainHeader.sass
+++ b/sass/_mainHeader.sass
@@ -1,10 +1,10 @@
 header
-  width: 100%
-  display: flex
-  flex-flow: row-reverse wrap
-  justify-content: space-around
-  align-items: center
+  +display(flex)
+  +flex-flow(row-reverse wrap)
+  +justify-content(space-around)
+  +align-items(center)
   padding: 65px 0
+  width: 100%
 
 
 #Logo
