--- a/docs/css/content.nest.sass.css
+++ b/docs/css/content.nest.sass.css
@@ -249,9 +249,9 @@ header {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row-reverse;
-  -moz-flex-flow: row-reverse;
-  flex-flow: row-reverse;
+  -webkit-flex-flow: row-reverse wrap;
+  -moz-flex-flow: row-reverse wrap;
+  flex-flow: row-reverse wrap;
   -webkit-box-pack: start;
   -moz-box-pack: start;
   box-pack: start;
@@ -285,16 +285,16 @@ header {
   -moz-flex: 1.5 1 250px;
   -ms-flex: 1.5 1 250px;
   flex: 1.5 1 250px;
-  padding: 3rem; }
+  padding: 1.5rem 3rem 4.5rem 3rem; }
 
 .intro {
   -webkit-box-flex: 3;
   -moz-box-flex: 3;
   box-flex: 3;
-  -webkit-flex: 3 0 40vw;
-  -moz-flex: 3 0 40vw;
-  -ms-flex: 3 0 40vw;
-  flex: 3 0 40vw;
+  -webkit-flex: 3 1 30%;
+  -moz-flex: 3 1 30%;
+  -ms-flex: 3 1 30%;
+  flex: 3 1 30%;
   font-size: 1rem;
   line-height: 1.6rem;
   text-align: right;
