--- a/docs/css/learn.nest.sass.css
+++ b/docs/css/learn.nest.sass.css
@@ -174,7 +174,7 @@ nav > ul {
   height: 33px;
   padding-left: 15px; }
 
-nav > ul li {
+nav > ul > li {
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   box-flex: 1;
@@ -193,7 +193,21 @@ nav li > ul {
   border-radius: 15px;
   border: 1px solid #666;
   border-top: none;
-  padding: 10px; }
+  padding: 10px;
+  text-align: center;
+  margin: 0; }
+
+nav li > ul li {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -moz-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  font-size: 18px;
+  font-weight: 300;
+  padding: 5px; }
 
 /* Statement applies only to
   child ul, only when li is hovered */
@@ -205,24 +219,24 @@ nav li:hover > ul {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: stretch;
-  -moz-box-align: stretch;
-  box-align: stretch;
-  -webkit-align-items: stretch;
-  -moz-align-items: stretch;
-  -ms-align-items: stretch;
-  -o-align-items: stretch;
-  align-items: stretch;
-  -ms-flex-align: stretch;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  box-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  -o-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  box-align: start;
+  -webkit-align-items: flex-start;
+  -moz-align-items: flex-start;
+  -ms-align-items: flex-start;
+  -o-align-items: flex-start;
+  align-items: flex-start;
+  -ms-flex-align: start;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  -o-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
   -webkit-flex-flow: column nowrap;
   -moz-flex-flow: column nowrap;
   flex-flow: column nowrap; }
@@ -235,9 +249,9 @@ header {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row-reverse;
-  -moz-flex-flow: row-reverse;
-  flex-flow: row-reverse;
+  -webkit-flex-flow: row-reverse wrap;
+  -moz-flex-flow: row-reverse wrap;
+  flex-flow: row-reverse wrap;
   -webkit-box-pack: start;
   -moz-box-pack: start;
   box-pack: start;
@@ -271,16 +285,16 @@ header {
   -moz-flex: 1.5 1 250px;
   -ms-flex: 1.5 1 250px;
   flex: 1.5 1 250px;
-  padding: 3rem; }
+  padding: 1.5rem 3rem 4.5rem 3rem; }
 
 .intro {
   -webkit-box-flex: 3;
   -moz-box-flex: 3;
   box-flex: 3;
-  -webkit-flex: 3 0 40vw;
-  -moz-flex: 3 0 40vw;
-  -ms-flex: 3 0 40vw;
-  flex: 3 0 40vw;
+  -webkit-flex: 3 1 30%;
+  -moz-flex: 3 1 30%;
+  -ms-flex: 3 1 30%;
+  flex: 3 1 30%;
   font-size: 1rem;
   line-height: 1.6rem;
   text-align: right;
