format remaining pages for jekyll, add timeline content
Former-commit-id: 5b3996293885f8a3074bf6929157ab46dbb69daa [formerly bfea2d7b163a0d495f21059581cdd1858934ffa8]
Former-commit-id: 158105df4c128191248bd1dcccdf266e2c6458ef

--- a/css/content.nest.sass.css
+++ b/css/content.nest.sass.css
@@ -666,11 +666,13 @@ div .gallery {
   align-items: stretch;
   -ms-flex-align: stretch;
   width: 90%;
-  margin: auto;
-  border-bottom: 1px solid #50500f; }
-  .columnSet section:nth-child(odd) {
+  margin: 0 auto;
+  padding: 0;
+  background-color: rgba(50, 50, 0, 0.4);
+  border-bottom: 3px solid black; }
+  .columnSet article:nth-child(odd) {
     background-color: rgba(50, 50, 0, 0.7); }
-  .columnSet section:nth-child(even) {
+  .columnSet article:nth-child(even) {
     background-color: rgba(10, 10, 10, 0.7); }
   @media only screen and (max-width: 650px) {
     .columnSet {
