--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,9 +15,9 @@
 			<li><a href="machines.html">Machines</a>
       <ul>
 						<li><a href="machines.html#robots">Robots</a></li>
-						<li><a href="machines.html#construction">Building</a></li>
+						<li><a href="machines.html#building">Building</a></li>
 						<li><a href="machines2.html#power">Power</a></li>
-						<li><a href="machines2.html#extraction">Mining</a></li>
+						<li><a href="machines2.html#mining">Mining</a></li>
 						<li><a href="machines2.html#transport">Transport</a></li>
 					</ul>
 			</li>
@@ -30,7 +30,7 @@
 			</li>
 			<li><a href="learn.html">Learn</a>
 					<ul>
-						<li><a href="learn.html#interactives">Try It</a></li>
+						<li><a href="learn.html#tryit">Try It</a></li>
 						<li><a href="learn.html#lessons">Lessons</a></li>
 					</ul>
 			</li>
