--- a/_layouts/learnpage.html
+++ b/_layouts/learnpage.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>Learnpage</title>
+		<title>{{page.title}}</title>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
 		<meta name="theme-color" content="#000000">
@@ -26,46 +25,6 @@ MathJax.Hub.Config({
 		</script>
 		<script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 		<script src="js/space.js"></script>
-		<style>
-input, button {
-	color:black;
-}
-summary {
-	padding:10px;
-	background-color:#000000;
-}
-table {
-	cursor:auto;
-}
-details, table {
-	margin-left:35px;
-}
-td{
-	padding-left:20px;
-	padding-right:20px;
-}
-h4 {
-	font-size:200%;
-}
-p {
-	max-width: 1280px;
-}
-.orbit summary{
-	background-color:#002000;
-	border-radius: 20px;
-}
-.orbit {
-	background-color:#002000;
-	border-radius: 20px;
-}
-.code {
-	font-family:'Titillium Web', monospace;
-	color:#5020FF;
-}
-.pad10 {
-	padding:10px;
-}
-		</style>
 	</head>
 <body>
 {%include obsolete-warning.html %}
