format remaining pages for jekyll, add timeline content
Former-commit-id: bfea2d7b163a0d495f21059581cdd1858934ffa8

--- a/_includes/machinesMining.html
+++ b/_includes/machinesMining.html
@@ -1,4 +1,4 @@
-<div class="container" id="extraction">
+<div class="container" id="mining">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
