--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -84,3 +84,14 @@
 		</section>
 {% include asidePearyColony.html %}
 </div>
+<section class="frameContainer" id="PearyModels">
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
+						<iframe src="modelProxy23.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</div>
+ </div>
+ <div class="framePairBottom">
+ The first permanent lunar structure, built mostly of lunar materials, on-site, by remotely-operated robotic machinery.
+ </div>
+</section>
