--- a/_includes/colonyModelsLalande.html
+++ b/_includes/colonyModelsLalande.html
@@ -1,4 +1,4 @@
-	<div class="container_SF_iframe" id="3dLalande">
+	<section class="frameContainer" id="3dLalande">
 		<div class="SF-Div">
 			<h2>Interactive 3d models</h2>
 			Click the play arrow to load the 3d models
@@ -11,25 +11,51 @@
 			more frequent and dramatic with time. Right now they are at a pretty early
 			stage.
 		</div>
-  <figure class="framewrap frame16x9">
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
 						<iframe src="modelProxy10.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
-	     <!--<figcaption>i probably already tried this...This model shows many years of development. How many? Hard to say, that would depend on advancements in robotics more than anything else - since	we are taking the money for granted.</figcaption>-->
-		</figure>
-  <section class="framewrap frame16x9">
-						<iframe src="modelProxy11.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-						</iframe>
-		</section>
-  <section class="framewrap frame16x9">
+		</div>
+  </div>
+  <div class="framePairBottom">
+    This model shows many years of development. How many? Hard to say, that
+			 would depend on advancements in robotics more than anything else -
+			 since	we are taking the money for granted.
+  </div>
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
+				<iframe src="modelProxy11.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+				</iframe>
+  </div>
+  <div class="framePairBottom">
+    This cutaway lets you appreciate the structure and layout of this atrium and sunken hall combination. It is the first full habitat - the first built on-site, not a prefab tube hab made on Earth.
+			</div>
+		</div>
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
 						<iframe src="modelProxy12.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
-		</section>
-  <section class="framewrap frame16x9">
+		</div>
+ </div>
+ <div class="framePairBottom">
+  Here is a nerd-session about how the radiation blind works. It's a valuable innovation, as the only other way to have natural light is to put 3.5 meters of solid glass over a living space. Atriums hundreds of meters long later become the first gardens and farms on the Moon.
+ </div>
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
 						<iframe src="modelProxy13.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
-		</section>
-  <section class="framewrap frame16x9">
+		</div>
+  </div>
+ <div class="framePairBottom">
+		The gallery habitats are the first ones truly designed for life-long residence. They require more infrastructure to build. They, and the long atriums, are the first expressions of the idea it is better to build at scale.
+ </div>
+ <div class="framePairTop">
+  <div class="framewrap frame16x9">
 						<iframe src="modelProxy14.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
-		</section>
-</div>
+		</div>
+ </div>
+ <div class="framePairBottom">
+  Lalande City, home to a million people. Well, the beginnings of it. It takes an awful lot of quartz to make that dome, but what you get is pretty snazzy.
+ </div>
+</section>
