--- a/_includes/machinesBuilding.html
+++ b/_includes/machinesBuilding.html
@@ -105,7 +105,7 @@
 		</div>
 	</aside>
 </div>
-<div class="container_SF_iframe">
+<section class="frameContainer">
 	<div class="SF-Div">
 		<h2>Interactive 3d models</h2>
 		Click the play arrow to load the 3d models
@@ -118,25 +118,39 @@
 		more frequent and dramatic with time. Right now they are at a pretty early
 		stage.
 	</div>
-	<section class="framewrap frame16x9">
+<div class="framePairTop">
+	<div class="framewrap frame16x9">
 					<iframe src="modelProxy17.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
-	</section>
-	<section class="framewrap frame16x9">
+	</div>
+</div>
+<div class="framePairBottom">
+  The production of basalt fiber is critical technology for large construction. Cable can perhaps be imported for the first hab, after that this has to be made to work.
+</div>
+<div class="framePairTop">
+	<div class="framewrap frame16x9">
 					<iframe src="modelProxy18.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
-	</section>
-
-	<section class="framewrap frame16x9">
+	</div>
+</div>
+<div class="framePairBottom">
+ The Melt-In-Place stations need to be the backbone of early construction.	They can produce a wide range of useful items, a very wide range if the	rovers are agile enough to assist. They can produce materials in bulk, so if	the materials have some weaknesses, you can simply use more to compensate.
+</div>
+<div class="framePairTop">
+	<div class="framewrap frame16x9">
 					<iframe src="modelProxy20.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
-	</section>
-	<section>
+	</div>
+</div>
+<div class="framePairBottom">
+	The hangars will be filled up with lots more things. This early draft gives some sense that industrial scales are sought, and the work flow will be	complex.
+</div>
+	<div>
 		<div class="SF-Div">
 			On to <a href="machines2.html">Power, Mining, and Transport</a>
 		</div>
-	</section>
-</div>
+	</div>
+</section>
