--- a/css/main.nest.sass.css
+++ b/css/main.nest.sass.css
@@ -242,12 +242,36 @@ nav li:hover > ul {
   flex-flow: column nowrap; }
 
 header {
-  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-flow: row-reverse wrap;
+  -moz-flex-flow: row-reverse wrap;
   flex-flow: row-reverse wrap;
+  -webkit-box-pack: distribute;
+  -moz-box-pack: distribute;
+  box-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
+  -ms-justify-content: space-around;
+  -o-justify-content: space-around;
   justify-content: space-around;
+  -ms-flex-pack: distribute;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
   align-items: center;
-  padding: 65px 0; }
+  -ms-flex-align: center;
+  padding: 65px 0;
+  width: 100%; }
 
 #Logo {
   flex: 0 0 40%; }
@@ -633,20 +657,19 @@ div .gallery {
   align-items: stretch;
   -ms-flex-align: stretch;
   width: 90%;
-  margin: auto;
-  border-bottom: 1px solid #50500f; }
-  .columnSet section:nth-child(odd) {
+  margin: 0 auto;
+  padding: 0;
+  background-color: rgba(50, 50, 0, 0.4);
+  border-bottom: 3px solid black; }
+  .columnSet article:nth-child(odd) {
     background-color: rgba(50, 50, 0, 0.7); }
-  .columnSet section:nth-child(even) {
+  .columnSet article:nth-child(even) {
     background-color: rgba(10, 10, 10, 0.7); }
   @media only screen and (max-width: 650px) {
     .columnSet {
       -webkit-flex-flow: column nowrap;
       -moz-flex-flow: column nowrap;
       flex-flow: column nowrap; } }
-
-.underHeader {
-  margin-top: 3rem; }
 
 .column {
   -webkit-box-flex: 1;
