fix 3d model iframe layout
Former-commit-id: 56b467973053525e99df5da8a127fb68744ab186

--- a/_includes/machinesMining.html
+++ b/_includes/machinesMining.html
@@ -438,13 +438,18 @@
 		</div>
 	</aside>
 </div>
-<div class="container_SF_iframe">
-	<section class="framewrap frame16x9">
-					<iframe src="modelProxy19.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-					</iframe>
-	</section>
+<section class="frameContainer">
+ <div class="framePairTop">
+		<div class="framewrap frame16x9">
+						<iframe src="modelProxy19.html" frameborder="0" allowfullscreen
+						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+	 </div>
+ </div>
+ <div class="framePairBottom">
+  The dust roaster hasn't been labelled. It is an important piece.	It takes a molten regolith feed and super-heats it by induction, then passes	that through an electric field that causes different ions to deflect by	different amounts. You get a set of pure metals in the collector, neatly	separated. And you can also skim off pure oxygen during the process. This one	machine solves several problems. Even the slag is useful.
 </div>
+</section>
 <div class="container">
 	<section>
 		<div class="outerDiv">
