fix page layout of 3d models
Former-commit-id: ef37b6da5b7616f6c91560c7565faa8915f34c17 [formerly 4803c2c911302ca98654cf51d0f00450786f109f]
Former-commit-id: b1fa42070ab0159d77dd78747ba47b60255bd797

--- a/_includes/PearyColony.html
+++ b/_includes/PearyColony.html
@@ -87,11 +87,12 @@
 <section class="frameContainer" id="PearyModels">
  <div class="framePairTop">
   <div class="framewrap frame16x9">
-						<iframe src="modelProxy23.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						<iframe src="modelProxy21.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</div>
  </div>
  <div class="framePairBottom">
- The first permanent lunar structure, built mostly of lunar materials, on-site, by remotely-operated robotic machinery.
+	An initial model of a permanent polar habitat. This hab is actually easier to	build than the ones at Lalande because the only tension loads that need to be	handled are on the ceiling, and that part will be a membrane shipped from
+	Earth.
  </div>
 </section>
