--- a/_includes/machinesPowerSolarThermal.html
+++ b/_includes/machinesPowerSolarThermal.html
@@ -66,10 +66,15 @@
 		</figure>
 	</aside>
 </div>
-<div class="container_SF_iframe">
-	<section class="framewrap frame16x9">
-					<iframe src="modelProxy22.html" frameborder="0" allowfullscreen
-					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-					</iframe>
-	</section>
-</div>
+<section class="frameContainer">
+ <div class="framePairTop">
+		<div class="framewrap frame16x9">
+						<iframe src="modelProxy22.html" frameborder="0" allowfullscreen
+						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</div>
+ </div>
+ <div class="framePairBottom">
+	 This model shows an older radiator design, otherwise it's similar to the	more recent model shown in the Phase 1 Overview model.
+ </div>
+</section>
