add content to timeline
Former-commit-id: a5f62d9efb0a00fbd01aa063f779f7c57b33bbee [formerly 59d74765dd2895fb78528b2ccc2ed17b86ec3c0d]
Former-commit-id: fe094741e5e0cb82ad6dc90b25ed9f56a9c3a49c

--- a/_includes/transportTethers.html
+++ b/_includes/transportTethers.html
@@ -35,7 +35,7 @@
 	<aside>
 	</aside>
 </div>
-<div class="container">
+<div class="container" id="AsteroidAnchors">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -45,7 +45,7 @@
 					along the lines of the Keck mission architecture
 					would be needed. To get something worthwhile, the virtual colony
 					version beefs it up by a factor of 10, meaning an asteroid massing about
-					5000 metric tons. A nice one full
+					7500 metric tons. A nice one full
 					of carbon chemicals, pure metals, and hydrated minerals. That one
 					goes into a polar orbit. With it, the small initial polar colony
 					could go anywhere on the Moon every two weeks, and could lauch to
