--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -137,13 +137,13 @@ div .gallery
   width: 90%
   margin: 0 auto
   padding: 0
-  background-color: rgba(50,50, 0, 0.4)
+  background-color: rgba(0, 0, 0, 0.6)
   border-bottom: 3px solid black
   article:nth-child(odd)
     background-color: $outerBkgd
   article:nth-child(even)
     background-color: $innerBkgd
-  @media only screen and (max-width: 650px)
+  @media only screen and (max-width: 1000px)
     +flex-flow(column nowrap)
 
 
