--- a/docs/css/main.nest.sass.css
+++ b/docs/css/main.nest.sass.css
@@ -683,8 +683,36 @@ div .gallery {
   margin: 0;
   padding: 15px; }
 
-.container_SF_iframe {
-  width: 100%; }
+.frameContainer {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column nowrap;
+  -moz-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  -o-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  -webkit-box-align: stretch;
+  -moz-box-align: stretch;
+  box-align: stretch;
+  -webkit-align-items: stretch;
+  -moz-align-items: stretch;
+  -ms-align-items: stretch;
+  -o-align-items: stretch;
+  align-items: stretch;
+  -ms-flex-align: stretch;
+  width: 90%; }
 
 .SF-Div {
   background-color: rgba(0, 0, 0, 0.7);
@@ -695,6 +723,22 @@ div .gallery {
   padding: 15px;
   margin-bottom: 30px; }
 
+.framePairTop {
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 1.5rem 1.5rem 0 0;
+  padding: 1rem; }
+
+.framePairBottom {
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 1.5rem 1.5rem;
+  padding: 0 15px 15px 15px;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right;
+  margin-bottom: 20px; }
+
 .framewrap {
   position: relative;
   height: 0;
@@ -704,7 +748,8 @@ div .gallery {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    border: 1px solid #73730f; }
 
 .frame16x9 {
   padding-bottom: 56.25%; }
@@ -727,6 +772,10 @@ div .gallery {
 @media (min-height: 700px) {
   .goodHeight {
     height: 650px; } }
+
+@media (min-height: 600px) {
+  .goodHeight {
+    height: 550px; } }
 
 p.atom {
   margin: 0.4rem 1.5rem;
